[gd_scene load_steps=5 format=3 uid="uid://bx0f0rdp2kus3"]

[ext_resource type="Script" path="res://ui/game_over.gd" id="1"]
[ext_resource type="Theme" uid="uid://dnfyfchbmcxbe" path="res://themes/large_ui_theme.tres" id="3"]
[ext_resource type="Theme" uid="uid://crxug62ulgqui" path="res://themes/ui_theme.tres" id="5"]
[ext_resource type="Script" path="res://game_rules/points_label.gd" id="6"]

[node name="game_over_container" type="CenterContainer"]
custom_minimum_size = Vector2(300, 400)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(400, 500)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="gameover_label" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme = ExtResource("3")
bbcode_enabled = true
text = "[center]Game Over[/center]"

[node name="CenterContainer2" type="CenterContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="points_label" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer/CenterContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme = ExtResource("5")
text = "Points: 999"
script = ExtResource("6")

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("5")
bbcode_enabled = true
text = "[center]Point Breakdown:[/center]"

[node name="CenterContainer3" type="CenterContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="points_breakdown_grid" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer/CenterContainer3"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="Panel2" type="Panel" parent="Panel"]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 106.0

[node name="MarginContainer2" type="MarginContainer" parent="Panel/Panel2"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Panel2/MarginContainer2"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Panel/Panel2/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="resume_button" type="Button" parent="Panel/Panel2/MarginContainer2/VBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme = ExtResource("5")
text = "Resume in Freeplay"

[node name="Panel" type="Panel" parent="Panel/Panel2/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="CenterContainer2" type="CenterContainer" parent="Panel/Panel2/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="restart_button" type="Button" parent="Panel/Panel2/MarginContainer2/VBoxContainer/CenterContainer2"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme = ExtResource("5")
text = "Restart"

[connection signal="pressed" from="Panel/Panel2/MarginContainer2/VBoxContainer/CenterContainer/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/Panel2/MarginContainer2/VBoxContainer/CenterContainer2/restart_button" to="." method="_on_restart_button_pressed"]
